# homelab-jellyfin-media-checker

./: README.md  pyproject.toml
src/: check_media.py  generate_media_list.py  helper_functions.py
