[project]
name = "homelab-jellyfin-media-checker"
version = "0.1.0"
description = "A set of checker files to evaluate the integrity of a media library."
authors = [
    {name = "John Palmer"}
]
license = "GPLv3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
